# revkit-2.0

./: .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/classical/optimization/: esop_minimization.cpp  esop_minimization.hpp  exorcism_minimization.cpp  exorcism_minimization.hpp  optimization.hpp
src/core/: functor.hpp  properties.cpp  properties.hpp  version.cpp  version.hpp
src/core/io/: pla_parser.cpp  pla_parser.hpp  pla_processor.hpp  read_pla_to_bdd.cpp  read_pla_to_bdd.hpp
src/core/utils/: benchmark_table.hpp  program_options.cpp  program_options.hpp  terminal.cpp  terminal.hpp  timeout.cpp  timeout.hpp  timer.hpp
src/reversible/: circuit.cpp  circuit.hpp  gate.cpp  gate.hpp  pattern.cpp  pattern.hpp  rcbdd.cpp  rcbdd.hpp  target_tags.cpp  target_tags.hpp  truth_table.cpp  truth_table.hpp  variable.cpp  variable.hpp
src/reversible/functions/: active_controls.cpp  active_controls.hpp  add_circuit.cpp  add_circuit.hpp  add_gates.cpp  add_gates.hpp  add_line_to_circuit.cpp  add_line_to_circuit.hpp  approximate_additional_lines.cpp  approximate_additional_lines.hpp  calculate_additional_lines.cpp  calculate_additional_lines.hpp  circuit_hierarchy.cpp  circuit_hierarchy.hpp  circuit_to_truth_table.cpp  circuit_to_truth_table.hpp  clear_circuit.cpp  clear_circuit.hpp  copy_circuit.cpp  copy_circuit.hpp  copy_metadata.cpp  copy_metadata.hpp  create_simulation_pattern.cpp  create_simulation_pattern.hpp  expand_circuit.cpp  expand_circuit.hpp  extend_pla.cpp  extend_pla.hpp  extend_truth_table.cpp  extend_truth_table.hpp  find_lines.cpp  (+13 more)
(+130 files in other folders)
