# Configuration
add_definitions(-Werror -fPIC)
add_ext_library("gmp;gmpxx")

srcdirlist(directories ".")
foreach(dir ${directories})
  file(GLOB_RECURSE files ${dir}/*.cpp)
  foreach(adir ${addon_directories})
    file(GLOB_RECURSE addon_files ${CMAKE_SOURCE_DIR}/addons/${adir}/src/${dir}/*.cpp)
    set(files ${files} ${addon_files})
  endforeach()
  add_library(objlib_${dir} OBJECT ${files})
  if(revkit_BUILD_SHARED)
    add_library(revkit_${dir} SHARED $<TARGET_OBJECTS:objlib_${dir}>)
    target_link_libraries(revkit_${dir} ${Boost_LIBRARIES})
  endif()
  if(revkit_BUILD_STATIC)
    add_library(revkit_${dir}_static STATIC $<TARGET_OBJECTS:objlib_${dir}>)
    target_link_libraries(revkit_${dir}_static ${Boost_LIBRARIES})
  endif()
  foreach(library ${ext_libraries})
    if(revkit_BUILD_SHARED)
      target_link_libraries(revkit_${dir} ${library})
    endif()
    if(revkit_BUILD_STATIC)
      target_link_libraries(revkit_${dir}_static ${library})
    endif()
  endforeach()
endforeach()
